--- a/css/main.css
+++ b/css/main.css
@@ -11584,6 +11584,10 @@ h6,
   color: #3a9ad9;
 }
 
+.py-7 {
+  padding: 64px 0;
+}
+
 .w-sm-100 {
   width: 100%;
 }
@@ -11628,7 +11632,7 @@ h6,
 }
 .navbar .navbar-brand,
 .navbar .nav-link {
-  font-size: 1.4em;
+  font-size: 1.3em;
 }
 .navbar .navbar-brand:hover,
 .navbar .nav-link:hover {
@@ -11649,6 +11653,30 @@ h6,
   -webkit-backdrop-filter: blur(1px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.section.our-team .card {
+  border: none;
+  transition: all 0.3s ease;
+}
+
+.section.our-team .card:hover {
+  transform: translateY(-10px);
+}
+
+.social-icons a {
+  font-size: 1.5rem;
+  color: #333;
+  margin: 0 10px;
+  transition: color 0.3s ease;
+}
+
+.social-icons a:hover {
+  color: #3a9ad9;
+}
+
+.social-icons {
+  margin-top: 10px;
 }
 
 /*# sourceMappingURL=main.css.map */
