--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,3 +1,18 @@
+// p-0: 0rem (0px)
+// p-1: 0.25rem (4px)
+// p-2: 0.5rem (8px)
+// p-3: 1rem (16px)
+// p-4: 1.5rem (24px)
+// p-5: 3rem (48px)
+// p-6: 3.5rem (56px)
+// p-7: 4rem (64px)
+// p-8: 4.5rem (72px)
+// p-9: 5rem (80px)
+// p-10: 6rem (96px)
+.py-7{
+    padding: 64px 0;
+}
+
 .w-sm-100 {
     @include media-breakpoint-up(xs) {
         width: 100%;
