--- a/css/main.css
+++ b/css/main.css
@@ -11710,4 +11710,57 @@ h6,
   height: 250px;
 }
 
+.back-to-top {
+  position: fixed;
+  bottom: 110px;
+  right: 25px;
+  width: 50px;
+  height: 50px;
+  background-color: #3a9ad9;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s ease;
+  z-index: 1000;
+}
+
+.back-to-top.show {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+.back-to-top:hover {
+  background-color: rgb(36.2212765957, 127.7276595745, 187.7787234043);
+}
+
+.whatsapp-button {
+  position: fixed;
+  bottom: 30px;
+  right: 20px;
+  background-color: #25D366;
+  color: #fff;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+.whatsapp-button:hover {
+  background-color: #20c157;
+}
+
 /*# sourceMappingURL=main.css.map */
